FINAL RIZE SUBMISSION. added more comments.  both completed CSS files for both pages of site

--- a/pageTwoStyling.css
+++ b/pageTwoStyling.css
@@ -6,6 +6,10 @@ body{
     color: #ffffff; 
 }
 
+#classicFavoritesTitle{ 
+  text-align: center;
+}
+
 #headerTwo{ 
     display: flex;
     flex-direction: column;
