--- a/pageOneStyling.css
+++ b/pageOneStyling.css
@@ -1,3 +1,25 @@
+@media screen and (min-width: 768px){
+    #diorSauvage, #armaniStronger, #yves{ 
+        flex-direction: row;
+        gap: 2rem;
+    }
+}
+
+@media screen and (min-width: 1024px){ 
+    #diorSauvage, #armaniStronger, #yves{ 
+        max-width: 1000px;
+        margin: 0 auto; 
+    }
+
+    #header{ 
+        padding: 3rem 0;
+    }
+    
+    .footer{ 
+        padding: 2rem 0; 
+    }
+}
+
 body{ 
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0; 
@@ -47,7 +69,7 @@ body{
 
 
 #diorSauvage{ 
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -56,7 +78,7 @@ body{
 }
 
 #armaniStronger{ 
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -65,7 +87,7 @@ body{
 
 
 #yves{ 
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
