--- a/pageTwoStyling.css
+++ b/pageTwoStyling.css
@@ -1,3 +1,25 @@
+@media screen and (min-width: 768px){
+    #chanel, #Paco, #Tom, #versace { 
+        flex-direction: row;
+        gap: 2rem;
+    }
+}
+
+@media screen and (min-width: 1024px){ 
+    #chanel, #Paco, #Tom, #versace { 
+        max-width: 1000px;
+        margin: 0 auto; 
+    }
+
+    #headerTwo{ 
+        padding: 3rem 0;
+    }
+    
+    .footer2{ 
+        padding: 2rem 0; 
+    }
+}
+
 body{ 
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0; 
@@ -10,6 +32,7 @@ body{
   text-align: center;
 }
 
+/* experimenting with linear gradient background color switching */
 #headerTwo{ 
     display: flex;
     flex-direction: column;
@@ -21,7 +44,7 @@ body{
 }
 
 #chanel{ 
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -30,7 +53,7 @@ body{
 }
 
 #Paco{ 
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -39,7 +62,7 @@ body{
 
 
 #Tom{ 
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -48,7 +71,7 @@ body{
 }
 
 #versace{
-    display:flexbox; 
+    display:flex; 
     flex-direction: column; 
     align-items: center; 
     justify-content: center;
