--- a/pageOneStyling.css
+++ b/pageOneStyling.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 768px){
+/* @media screen and (min-width: 768px){
     #diorSauvage, #armaniStronger, #yves{ 
         flex-direction: row;
         gap: 2rem;
@@ -18,7 +18,7 @@
     .footer{ 
         padding: 2rem 0; 
     }
-}
+} */
 
 body{ 
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -39,7 +39,7 @@ body{
     background-color: #ffffff;
 } */
 
-/* #currently-trending-list li{ 
+#currently-trending-list li{ 
     counter-increment: item;
     display: flex;   
     align-items: center;
@@ -51,7 +51,7 @@ body{
     font-size: 40px;
     font-weight: bold;
     text-align: right; 
-} */
+}
 
 /* *COMMENT* THis sections that is commented off was na experiment of me trying to attend a zigzag method unfortunately it did not work  */
 /* #currently-trending-list li img:nth-child(even){ 
@@ -70,8 +70,8 @@ body{
     text-align: center;
 } */
 
-
-#diorSauvage{ 
+/* commented out because bootstrap is taking care of it */
+/* #diorSauvage{ 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,22 +96,22 @@ body{
     justify-content: center;
     text-align: center;
 
-}
+} */
 
-#trendingListTitle{
+/* #trendingListTitle{
     text-align: center;
-}
+} */
 
 .site-header{ 
     background-color: #ffffff;
     color: black;
 }
 
-.site-footer{
+/* .site-footer{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
     color: black;
-}
+} */
