completed page Two by implementing bootstrap and elimnating any extra code that is not needed.  Refined page One with bootstrap.  Completed bootstrap implementation on the whole site.

--- a/pageOneStyling.css
+++ b/pageOneStyling.css
@@ -107,11 +107,11 @@ body{
     color: black;
 }
 
-/* .site-footer{
-    display: flex;
+.site-footer{
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     background-color: #ffffff;
     color: black;
-} */
+}
