--- a/pageTwoStyling.css
+++ b/pageTwoStyling.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 768px){
+/* @media screen and (min-width: 768px){
     #chanel, #Paco, #Tom, #versace { 
         flex-direction: row;
         gap: 2rem;
@@ -18,7 +18,7 @@
     .footer2{ 
         padding: 2rem 0; 
     }
-}
+} */
 
 body{ 
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -28,22 +28,22 @@ body{
     color: #ffffff; 
 }
 
-#classicFavoritesTitle{ 
+/* #classicFavoritesTitle{ 
   text-align: center;
-}
+} */
 
 /* experimenting with linear gradient background color switching */
 #headerTwo{ 
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    text-align: center; */
     background: linear-gradient(to bottom, #ffffff 65%, #2b2b2b);
     color: black;
 }
 
-#chanel{ 
+/* #chanel{ 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,13 +76,13 @@ body{
     align-items: center; 
     justify-content: center;
     text-align: center;
-}
+} */
 
 .footer2{ 
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     background: linear-gradient(to bottom, #2b2b2b 1%, #ffffff);
     color: black;
 }
