--- a/pages/pageOne/pageOneStyling.css
+++ b/pages/pageOne/pageOneStyling.css
@@ -103,7 +103,7 @@ body{
 } */
 
 .site-header{ 
-    background-color: #ffffff;
+    background: linear-gradient(to bottom, #ffffff 65%, #2b2b2b);
     color: black;
 }
 
@@ -112,6 +112,6 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center; */
-    background-color: #ffffff;
+    background: linear-gradient(to bottom, #2b2b2b 1%, #ffffff);
     color: black;
 }
